logs/cron_log.log
rake aborted!
SyntaxError: /Users/toolmaker/git/Boia/Rakefile:12: syntax error, unexpected keyword_in, expecting ')'
  for (ag in agendamentos  )
            ^
/Users/toolmaker/git/Boia/Rakefile:15: syntax error, unexpected keyword_end, expecting end-of-input
/Users/toolmaker/.rvm/gems/ruby-2.3.0/gems/rake-12.0.0/exe/rake:27:in `<top (required)>'
/Users/toolmaker/.rvm/gems/ruby-2.3.0/bin/ruby_executable_hooks:15:in `eval'
/Users/toolmaker/.rvm/gems/ruby-2.3.0/bin/ruby_executable_hooks:15:in `<main>'
(See full trace by running task with --trace)
rake aborted!
SyntaxError: /Users/toolmaker/git/Boia/Rakefile:12: syntax error, unexpected keyword_in, expecting ')'
  for (ag in agendamentos  )
            ^
/Users/toolmaker/git/Boia/Rakefile:15: syntax error, unexpected keyword_end, expecting end-of-input
/Users/toolmaker/.rvm/gems/ruby-2.3.0/gems/rake-12.0.0/exe/rake:27:in `<top (required)>'
/Users/toolmaker/.rvm/gems/ruby-2.3.0/bin/ruby_executable_hooks:15:in `eval'
/Users/toolmaker/.rvm/gems/ruby-2.3.0/bin/ruby_executable_hooks:15:in `<main>'
(See full trace by running task with --trace)
rake aborted!
SyntaxError: /Users/toolmaker/git/Boia/Rakefile:12: syntax error, unexpected keyword_in, expecting ')'
  for (ag in agendamentos  )
            ^
/Users/toolmaker/git/Boia/Rakefile:15: syntax error, unexpected keyword_end, expecting end-of-input
/Users/toolmaker/.rvm/gems/ruby-2.3.0/gems/rake-12.0.0/exe/rake:27:in `<top (required)>'
/Users/toolmaker/.rvm/gems/ruby-2.3.0/bin/ruby_executable_hooks:15:in `eval'
/Users/toolmaker/.rvm/gems/ruby-2.3.0/bin/ruby_executable_hooks:15:in `<main>'
(See full trace by running task with --trace)
rake aborted!
SyntaxError: /Users/toolmaker/git/Boia/Rakefile:12: syntax error, unexpected keyword_in, expecting ')'
  for (ag in agendamentos  )
            ^
/Users/toolmaker/git/Boia/Rakefile:15: syntax error, unexpected keyword_end, expecting end-of-input
/Users/toolmaker/.rvm/gems/ruby-2.3.0/gems/rake-12.0.0/exe/rake:27:in `<top (required)>'
/Users/toolmaker/.rvm/gems/ruby-2.3.0/bin/ruby_executable_hooks:15:in `eval'
/Users/toolmaker/.rvm/gems/ruby-2.3.0/bin/ruby_executable_hooks:15:in `<main>'
(See full trace by running task with --trace)
rake aborted!
SyntaxError: /Users/toolmaker/git/Boia/Rakefile:12: syntax error, unexpected keyword_in, expecting ')'
  for (ag in agendamentos  )
            ^
/Users/toolmaker/git/Boia/Rakefile:15: syntax error, unexpected keyword_end, expecting end-of-input
/Users/toolmaker/.rvm/gems/ruby-2.3.0/gems/rake-12.0.0/exe/rake:27:in `<top (required)>'
/Users/toolmaker/.rvm/gems/ruby-2.3.0/bin/ruby_executable_hooks:15:in `eval'
/Users/toolmaker/.rvm/gems/ruby-2.3.0/bin/ruby_executable_hooks:15:in `<main>'
(See full trace by running task with --trace)
rake aborted!
SyntaxError: /Users/toolmaker/git/Boia/Rakefile:12: syntax error, unexpected keyword_in, expecting ')'
  for (ag in agendamentos  )
            ^
/Users/toolmaker/git/Boia/Rakefile:15: syntax error, unexpected keyword_end, expecting end-of-input
/Users/toolmaker/.rvm/gems/ruby-2.3.0/gems/rake-12.0.0/exe/rake:27:in `<top (required)>'
/Users/toolmaker/.rvm/gems/ruby-2.3.0/bin/ruby_executable_hooks:15:in `eval'
/Users/toolmaker/.rvm/gems/ruby-2.3.0/bin/ruby_executable_hooks:15:in `<main>'
(See full trace by running task with --trace)
rake aborted!
SyntaxError: /Users/toolmaker/git/Boia/Rakefile:12: syntax error, unexpected keyword_in, expecting ')'
  for (ag in agendamentos  )
            ^
/Users/toolmaker/git/Boia/Rakefile:15: syntax error, unexpected keyword_end, expecting end-of-input
/Users/toolmaker/.rvm/gems/ruby-2.3.0/gems/rake-12.0.0/exe/rake:27:in `<top (required)>'
/Users/toolmaker/.rvm/gems/ruby-2.3.0/bin/ruby_executable_hooks:15:in `eval'
/Users/toolmaker/.rvm/gems/ruby-2.3.0/bin/ruby_executable_hooks:15:in `<main>'
(See full trace by running task with --trace)
rake aborted!
SyntaxError: /Users/toolmaker/git/Boia/Rakefile:12: syntax error, unexpected keyword_in, expecting ')'
  for (ag in agendamentos  )
            ^
/Users/toolmaker/git/Boia/Rakefile:15: syntax error, unexpected keyword_end, expecting end-of-input
/Users/toolmaker/.rvm/gems/ruby-2.3.0/gems/rake-12.0.0/exe/rake:27:in `<top (required)>'
/Users/toolmaker/.rvm/gems/ruby-2.3.0/bin/ruby_executable_hooks:15:in `eval'
/Users/toolmaker/.rvm/gems/ruby-2.3.0/bin/ruby_executable_hooks:15:in `<main>'
(See full trace by running task with --trace)
rake aborted!
SyntaxError: /Users/toolmaker/git/Boia/Rakefile:12: syntax error, unexpected keyword_in, expecting ')'
  for (ag in agendamentos  )
            ^
/Users/toolmaker/git/Boia/Rakefile:15: syntax error, unexpected keyword_end, expecting end-of-input
/Users/toolmaker/.rvm/gems/ruby-2.3.0/gems/rake-12.0.0/exe/rake:27:in `<top (required)>'
/Users/toolmaker/.rvm/gems/ruby-2.3.0/bin/ruby_executable_hooks:15:in `eval'
/Users/toolmaker/.rvm/gems/ruby-2.3.0/bin/ruby_executable_hooks:15:in `<main>'
(See full trace by running task with --trace)
